<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_item_1"
        android:enabled="true"
        android:icon="@drawable/ic_apps"
        android:title="@string/bottom_item_1" />
    <item
        android:id="@+id/bottom_item_2"
        android:enabled="true"
        android:icon="@drawable/ic_requests"
        android:title="@string/bottom_item_2" />
    <item
        android:id="@+id/bottom_item_3"
        android:enabled="true"
        android:icon="@drawable/ic_home_outline"
        android:title="@string/bottom_item_5" />
    <item
        android:id="@+id/bottom_item_4"
        android:enabled="true"
        android:icon="@drawable/ic_block"
        android:title="@string/bottom_item_4" />
    <item
        android:id="@+id/bottom_item_5"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/bottom_item_3" />
</menu>
